Updated formatting to conform to PEP-8 style guide

--- a/Matrices_and_Markov_Chains/Matrices_and_Markov_Chains.ipynb
+++ b/Matrices_and_Markov_Chains/Matrices_and_Markov_Chains.ipynb
@@ -12,12 +12,14 @@
     "initial_state = np.array([0.25, 0.25, 0.25, 0.25])\n",
     "\n",
     "# Given transition matrix\n",
-    "transition_matrix = np.array([\n",
-    "    [0.83, 0.01, 0.07, 0.06],\n",
-    "    [0.12, 0.94, 0.04, 0.01],\n",
-    "    [0.03, 0.05, 0.79, 0.01],\n",
-    "    [0.02, 0.00, 0.10, 0.92]\n",
-    "])"
+    "transition_matrix = np.array(\n",
+    "    [\n",
+    "        [0.83, 0.01, 0.07, 0.06],\n",
+    "        [0.12, 0.94, 0.04, 0.01],\n",
+    "        [0.03, 0.05, 0.79, 0.01],\n",
+    "        [0.02, 0.00, 0.10, 0.92],\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -112,7 +114,7 @@
    ],
    "source": [
     "# Define nucleotide labels\n",
-    "nucleotides = ['A', 'C', 'G', 'T']\n",
+    "nucleotides = [\"A\", \"C\", \"G\", \"T\"]\n",
     "\n",
     "# Calculate the dot product for each pair of probability vectors\n",
     "dot_products = np.dot(transition_matrix, transition_matrix.T)\n",
@@ -121,7 +123,11 @@
     "np.fill_diagonal(dot_products, np.inf)\n",
     "\n",
     "print(\"\\nDot product for each probability vector pair:\")\n",
-    "[print(f\"{nucleotides[i]}/{nucleotides[j]}: {dot_products[i, j]:.3f}\") for i in range(len(nucleotides)) for j in range(i+1, len(nucleotides))]"
+    "[\n",
+    "    print(f\"{nucleotides[i]}/{nucleotides[j]}: {dot_products[i, j]:.3f}\")\n",
+    "    for i in range(len(nucleotides))\n",
+    "    for j in range(i + 1, len(nucleotides))\n",
+    "]"
    ]
   },
   {
@@ -147,9 +153,11 @@
    ],
    "source": [
     "# Assuming each nucleotide was equally distributed to start\n",
-    "cytosine_proportion = np.dot(np.linalg.matrix_power(transition_matrix, 1), initial_state)[1]\n",
+    "cytosine_proportion = np.dot(\n",
+    "    np.linalg.matrix_power(transition_matrix, 1), initial_state\n",
+    ")[1]\n",
     "cytosine_proportion_rounded = round(cytosine_proportion, 3)\n",
-    "print(cytosine_proportion_rounded)\n"
+    "print(cytosine_proportion_rounded)"
    ]
   },
   {
@@ -227,7 +235,9 @@
     "index_one = np.where(np.isclose(eigenvalues, 1))[0][0]\n",
     "\n",
     "# Use the corresponding eigenvector to get the steady-state vector\n",
-    "steady_state_vector = np.real(eigenvectors[:, index_one] / np.sum(eigenvectors[:, index_one]))\n",
+    "steady_state_vector = np.real(\n",
+    "    eigenvectors[:, index_one] / np.sum(eigenvectors[:, index_one])\n",
+    ")\n",
     "\n",
     "# Find the least likely nucleotide\n",
     "least_likely_nucleotide = nucleotides[np.argmin(steady_state_vector)]\n",
@@ -269,11 +279,11 @@
     "for time_step in range(2):\n",
     "    # Update the state vector with each time step\n",
     "    initial_state = np.dot(transition_matrix, initial_state)\n",
-    "    \n",
+    "\n",
     "    # Print the proportions for the current time step\n",
-    "    print(f\"Time Step {time_step + 1}:\", end=' ')\n",
+    "    print(f\"Time Step {time_step + 1}:\", end=\" \")\n",
     "    for nucleotide, proportion in zip(nucleotides, initial_state):\n",
-    "        print(f\"{nucleotide}: {proportion:.4f}\", end='   ')\n",
+    "        print(f\"{nucleotide}: {proportion:.4f}\", end=\"   \")\n",
     "    print()"
    ]
   },
@@ -318,12 +328,14 @@
    ],
    "source": [
     "# re-define the transition matrix\n",
-    "transition_matrix = np.array([\n",
-    "    [0.83, 0.01, 0.07, 0.06],\n",
-    "    [0.12, 0.94, 0.04, 0.01],\n",
-    "    [0.03, 0.05, 0.79, 0.01],\n",
-    "    [0.02, 0.00, 0.10, 0.92]\n",
-    "])\n",
+    "transition_matrix = np.array(\n",
+    "    [\n",
+    "        [0.83, 0.01, 0.07, 0.06],\n",
+    "        [0.12, 0.94, 0.04, 0.01],\n",
+    "        [0.03, 0.05, 0.79, 0.01],\n",
+    "        [0.02, 0.00, 0.10, 0.92],\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "# re-define the initial state vector\n",
     "initial_state = np.array([0.25, 0.25, 0.25, 0.25])\n",
@@ -339,9 +351,9 @@
     "\n",
     "    # Update the state vector with each time step\n",
     "    initial_state = np.dot(transition_matrix, initial_state)\n",
-    "    \n",
+    "\n",
     "    # Increment the time step counter\n",
-    "    time_steps += 1\n"
+    "    time_steps += 1"
    ]
   },
   {
@@ -377,20 +389,17 @@
    "source": [
     "# Redefining the matrix again because not redefining the matrix above was casuing me to return the incorrect values. Once this was redefined the code worked as expected.\n",
     "# Original matrix\n",
-    "original_data = np.array([\n",
-    "    [0.83, 0.01, 0.07, 0.06],\n",
-    "    [0.12, 0.94, 0.04, 0.01],\n",
-    "    [0.03, 0.05, 0.79, 0.01],\n",
-    "    [0.02, 0.00, 0.10, 0.92]\n",
-    "])\n",
+    "original_data = np.array(\n",
+    "    [\n",
+    "        [0.83, 0.01, 0.07, 0.06],\n",
+    "        [0.12, 0.94, 0.04, 0.01],\n",
+    "        [0.03, 0.05, 0.79, 0.01],\n",
+    "        [0.02, 0.00, 0.10, 0.92],\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "# Scaling matrix\n",
-    "scaling_matrix = np.array([\n",
-    "    [2, 1, 2, 3],\n",
-    "    [2, 2, 1, 1],\n",
-    "    [3, 3, 3, 1],\n",
-    "    [2, 1, 2, 2]\n",
-    "])\n",
+    "scaling_matrix = np.array([[2, 1, 2, 3], [2, 2, 1, 1], [3, 3, 3, 1], [2, 1, 2, 2]])\n",
     "\n",
     "# Rescale the data\n",
     "rescaled_data = original_data * scaling_matrix\n",
@@ -401,10 +410,12 @@
     "# Find the column with the largest Norm-Max\n",
     "max_norm_column_index = np.argmax(norm_max_values)\n",
     "\n",
-    "print(rescaled_data,\"\\n\")\n",
+    "print(rescaled_data, \"\\n\")\n",
     "print(\"\\nNorm-Max Values for Each Rescaled Column:\")\n",
-    "print(norm_max_values,\"\\n\")\n",
-    "print(max_norm_column_index, \"Following zero-index convention, 0 = A, 1 = C, 2 = G, 3 = T\")\n"
+    "print(norm_max_values, \"\\n\")\n",
+    "print(\n",
+    "    max_norm_column_index, \"Following zero-index convention, 0 = A, 1 = C, 2 = G, 3 = T\"\n",
+    ")"
    ]
   },
   {
@@ -476,8 +487,10 @@
     "print(normalized_rescaled_data)\n",
     "\n",
     "# Find the nucleotide with the lowest maintenance probability\n",
-    "lowest_maintenance_nucleotide = nucleotides[np.argmin(np.diag(normalized_rescaled_data))]\n",
-    "print(\"\\n\", lowest_maintenance_nucleotide)\n"
+    "lowest_maintenance_nucleotide = nucleotides[\n",
+    "    np.argmin(np.diag(normalized_rescaled_data))\n",
+    "]\n",
+    "print(\"\\n\", lowest_maintenance_nucleotide)"
    ]
   }
  ],
