--- a/Rand-Variables_Expectation_and_Var/Rand-Variables_Expectation_and_Var.ipynb
+++ b/Rand-Variables_Expectation_and_Var/Rand-Variables_Expectation_and_Var.ipynb
@@ -13,10 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import necessary packages\n",
+    "# Import necessary packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.stats import binom, norm \n",
+    "from scipy.stats import binom, norm\n",
     "from scipy.special import erf\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -123,8 +123,8 @@
     }
    ],
    "source": [
-    "#read in .csv into DataFrame\n",
-    "df = pd.read_csv('Yahtzee.csv')\n",
+    "# read in .csv into DataFrame\n",
+    "df = pd.read_csv(\"Yahtzee.csv\")\n",
     "df.head(6)"
    ]
   },
@@ -166,14 +166,14 @@
     }
    ],
    "source": [
-    "#Create subplots for each die\n",
+    "# Create subplots for each die\n",
     "fig, axes = plt.subplots(1, 5, figsize=(11, 3))\n",
     "\n",
-    "#Loop through the columns (dice)\n",
+    "# Loop through the columns (dice)\n",
     "for i, die_column in enumerate(df.columns):\n",
     "    ax = axes[i]\n",
     "    ax.hist(df[die_column], bins=range(1, 8), rwidth=0.9)\n",
-    "    ax.set_title(f'Distribution of {die_column}')\n",
+    "    ax.set_title(f\"Distribution of {die_column}\")\n",
     "    ax.set_xlabel(\"Dice Value\")\n",
     "    ax.set_ylabel(\"Frequency\")\n",
     "    ax.set_xticks(range(1, 7))\n",
@@ -210,11 +210,11 @@
     }
    ],
    "source": [
-    "#Calculate the sum of odd rolls and composite rolls for each Yahtzee roll\n",
+    "# Calculate the sum of odd rolls and composite rolls for each Yahtzee roll\n",
     "odd_rolls = df[df % 2 != 0].sum(axis=1)\n",
     "composite_rolls = df.sum(axis=1)\n",
     "\n",
-    "#Create histograms for both\n",
+    "# Create histograms for both\n",
     "plt.figure(figsize=(8, 3))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -257,33 +257,39 @@
     }
    ],
    "source": [
-    "#Count occurrences of two odd rolls and four even rolls\n",
+    "# Count occurrences of two odd rolls and four even rolls\n",
     "two_odd_rolls_count = ((df % 2 != 0).sum(axis=1) == 2).sum()\n",
     "four_even_rolls_count = ((df % 2 == 0).sum(axis=1) == 4).sum()\n",
     "\n",
-    "#Calculate total frequency (n)\n",
+    "# Calculate total frequency (n)\n",
     "total_frequency = len(df)\n",
     "\n",
-    "#Calculate relative observed frequency ratio\n",
+    "# Calculate relative observed frequency ratio\n",
     "relative_observed_frequency_ratio_odd = two_odd_rolls_count / total_frequency\n",
     "relative_observed_frequency_ratio_even = four_even_rolls_count / total_frequency\n",
     "\n",
-    "#Define params for binom distribution\n",
-    "n = 6  #Total number of rolls (6 rolls in total to test)\n",
-    "p_odd = 0.5  #Probability of rolling odd (success)\n",
-    "p_even = 0.5  #Probability of rolling even (success)\n",
+    "# Define params for binom distribution\n",
+    "n = 6  # Total number of rolls (6 rolls in total to test)\n",
+    "p_odd = 0.5  # Probability of rolling odd (success)\n",
+    "p_even = 0.5  # Probability of rolling even (success)\n",
     "\n",
-    "#Calculate expected frequencies based on binom distribution\n",
-    "#Expected frequency of exactly 2 odd rolls in 6 roll test\n",
+    "# Calculate expected frequencies based on binom distribution\n",
+    "# Expected frequency of exactly 2 odd rolls in 6 roll test\n",
     "expected_frequency_two_odd_rolls = binom.pmf(2, n, p_odd) * total_frequency\n",
     "\n",
-    "#Expected frequency of exactly 4 even rolls in 6 roll test\n",
+    "# Expected frequency of exactly 4 even rolls in 6 roll test\n",
     "expected_frequency_four_even_rolls = binom.pmf(4, n, p_even) * total_frequency\n",
     "\n",
-    "print(\"Relative Observed Frequency Ratio 2 odd rolls:\", relative_observed_frequency_ratio_odd)\n",
-    "print(\"Relative Observed Frequency Ratio 4 even rolls:\", relative_observed_frequency_ratio_even)\n",
+    "print(\n",
+    "    \"Relative Observed Frequency Ratio 2 odd rolls:\",\n",
+    "    relative_observed_frequency_ratio_odd,\n",
+    ")\n",
+    "print(\n",
+    "    \"Relative Observed Frequency Ratio 4 even rolls:\",\n",
+    "    relative_observed_frequency_ratio_even,\n",
+    ")\n",
     "print(\"Expected Frequency 2 odd rolls:\", expected_frequency_two_odd_rolls)\n",
-    "print(\"Expected Frequency 4 even rolls:\", expected_frequency_four_even_rolls)\n"
+    "print(\"Expected Frequency 4 even rolls:\", expected_frequency_four_even_rolls)"
    ]
   },
   {
@@ -340,28 +346,28 @@
    "source": [
     "dice_sum = df.sum(axis=1)\n",
     "\n",
-    "#Create an array of x values for testing (1 to 30)\n",
+    "# Create an array of x values for testing (1 to 30)\n",
     "x_values = np.arange(1, 31)\n",
     "\n",
-    "#Calculate empirical CDF using NumPy\n",
+    "# Calculate empirical CDF using NumPy\n",
     "empirical_cdf = np.array([(dice_sum <= x).mean() for x in x_values])\n",
     "\n",
-    "#Calculate theoretical CDF based on Central Limit Theorem\n",
+    "# Calculate theoretical CDF based on Central Limit Theorem\n",
     "\"\"\" Using scipy's 'erf' function \"The cumulative of the unit normal distribution is given by Phi(z) = 1/2[1 + erf(z/sqrt(2))]\".\n",
     "https://docs.scipy.org/doc/scipy/reference/generated/scipy.special.erf.html \"\"\"\n",
     "z_values = (x_values - dice_sum.mean()) / dice_sum.std()\n",
-    "theoretical_cdf = 0.5 * (1 + erf(z_values / np.sqrt(2))) \n",
+    "theoretical_cdf = 0.5 * (1 + erf(z_values / np.sqrt(2)))\n",
     "\n",
-    "#Calculate maximum offset (absolute difference) at each level\n",
+    "# Calculate maximum offset (absolute difference) at each level\n",
     "max_offsets = np.abs(empirical_cdf - theoretical_cdf)\n",
     "\n",
-    "#Calculate average of these maximum offsets\n",
+    "# Calculate average of these maximum offsets\n",
     "average_offset = np.mean(max_offsets)\n",
     "\n",
-    "#Plot the empirical and theoretical CDF\n",
+    "# Plot the empirical and theoretical CDF\n",
     "plt.figure(figsize=(5, 3))\n",
     "plt.plot(x_values, empirical_cdf, label=\"Empirical CDF\")\n",
-    "plt.plot(x_values, theoretical_cdf, label=\"Theoretical CDF\", linestyle='--')\n",
+    "plt.plot(x_values, theoretical_cdf, label=\"Theoretical CDF\", linestyle=\"--\")\n",
     "plt.xlabel(\"Sum of Dice\")\n",
     "plt.ylabel(\"CDF\")\n",
     "plt.legend()\n",
