--- a/probability_theory/probability_theory.ipynb
+++ b/probability_theory/probability_theory.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Import necessary packages\n",
     "import pandas as pd\n",
-    "import numpy as np "
+    "import numpy as np"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# Read .csv file into a dataframe\n",
-    "df = pd.read_csv('UMACurriculumAssociations.csv')"
+    "df = pd.read_csv(\"UMACurriculumAssociations.csv\")"
    ]
   },
   {
@@ -277,10 +277,16 @@
    ],
    "source": [
     "# Filter the dataset based on the specifications in the question.\n",
-    "cis_100_lv_bs = df[(df['courseLetter'] == 'CIS') & (df['courseNumber'].str.startswith('1')) & (df['Item'] == 'Computer Information Systems, BS checksheet')]\n",
+    "cis_100_lv_bs = df[\n",
+    "    (df[\"courseLetter\"] == \"CIS\")\n",
+    "    & (df[\"courseNumber\"].str.startswith(\"1\"))\n",
+    "    & (df[\"Item\"] == \"Computer Information Systems, BS checksheet\")\n",
+    "]\n",
     "count = len(cis_100_lv_bs)\n",
     "\n",
-    "print(f\"The Number of 100 level courses in the CIS department for Computer Information Systems BS Program is {count}\")\n"
+    "print(\n",
+    "    f\"The Number of 100 level courses in the CIS department for Computer Information Systems BS Program is {count}\"\n",
+    ")"
    ]
   },
   {
@@ -398,14 +404,16 @@
    ],
    "source": [
     "# Initialize a dictionary to store course counts\n",
-    "course_counts = {} \n",
+    "course_counts = {}\n",
     "# Group the data by 'courseName' and count the occurrences of 'CrossList' within each group\n",
-    "for course, group_df in df[df['ItemType'] == 'CrossList'].groupby('courseName'):\n",
+    "for course, group_df in df[df[\"ItemType\"] == \"CrossList\"].groupby(\"courseName\"):\n",
     "    course_counts[course] = len(group_df)\n",
     "\n",
     "# convert the crosslist count per course into a small DataFrame for easier calculations  in next cell\n",
-    "df_course_counts = pd.DataFrame.from_dict(course_counts, orient='index', columns=['CrossList Count'])\n",
-    "df_course_counts\n"
+    "df_course_counts = pd.DataFrame.from_dict(\n",
+    "    course_counts, orient=\"index\", columns=[\"CrossList Count\"]\n",
+    ")\n",
+    "df_course_counts"
    ]
   },
   {
@@ -426,16 +434,18 @@
    ],
    "source": [
     "# Count the number of crosslisted courses\n",
-    "crossList_count = len(df_course_counts['CrossList Count'])\n",
+    "crossList_count = len(df_course_counts[\"CrossList Count\"])\n",
     "\n",
     "# Calculate and display the mean, median, and mode of these courses\n",
-    "mean = np.mean(df_course_counts['CrossList Count'])\n",
-    "median = np.median(df_course_counts['CrossList Count'])\n",
-    "mode = df_course_counts['CrossList Count'].mode().iat[0] # specify index at 0 so mode is displayed correctly, the original output without this argument was weird and showing 0 and 1\n",
-    "print(f'Total count of crosslists: {crossList_count}')\n",
-    "print(f'Mean number of crosslists: {mean}')\n",
-    "print(f'Median number of crosslists: {median}')\n",
-    "print(f'Mode number of crosslists: {mode}')\n"
+    "mean = np.mean(df_course_counts[\"CrossList Count\"])\n",
+    "median = np.median(df_course_counts[\"CrossList Count\"])\n",
+    "mode = (\n",
+    "    df_course_counts[\"CrossList Count\"].mode().iat[0]\n",
+    ")  # specify index at 0 so mode is displayed correctly, the original output without this argument was weird and showing 0 and 1\n",
+    "print(f\"Total count of crosslists: {crossList_count}\")\n",
+    "print(f\"Mean number of crosslists: {mean}\")\n",
+    "print(f\"Median number of crosslists: {median}\")\n",
+    "print(f\"Mode number of crosslists: {mode}\")"
    ]
   },
   {
@@ -474,13 +484,15 @@
    ],
    "source": [
     "# list of courses we are looking for\n",
-    "courses_specified = ['CIS', 'CYB', 'DSC', 'ISS']\n",
+    "courses_specified = [\"CIS\", \"CYB\", \"DSC\", \"ISS\"]\n",
     "\n",
     "# filtered DataFrame\n",
-    "computing_courses_df = df[df['CourseLetter'].isin(courses_specified)] #capitalized the 'C' in 'CourseLetter\" column name to specify the column name in the dictionary\n",
+    "computing_courses_df = df[\n",
+    "    df[\"CourseLetter\"].isin(courses_specified)\n",
+    "]  # capitalized the 'C' in 'CourseLetter\" column name to specify the column name in the dictionary\n",
     "\n",
-    "#count of specified courses\n",
-    "computing_courses_df['CourseLetter'].value_counts()"
+    "# count of specified courses\n",
+    "computing_courses_df[\"CourseLetter\"].value_counts()"
    ]
   },
   {
@@ -507,7 +519,9 @@
    ],
    "source": [
     "# Drop duplicate course codes (consider cross-listed as one)\n",
-    "unique_computing_courses_df = computing_courses_df.drop_duplicates(subset=['CourseLetter', 'CourseNumber'])\n",
+    "unique_computing_courses_df = computing_courses_df.drop_duplicates(\n",
+    "    subset=[\"CourseLetter\", \"CourseNumber\"]\n",
+    ")\n",
     "\n",
     "# Get total count\n",
     "total_count = len(unique_computing_courses_df)\n",
@@ -537,16 +551,18 @@
    ],
    "source": [
     "# get the count of unique values in the DataFrame to avoid double counting courses\n",
-    "tot_course_count = df['CourseName'].nunique()\n",
+    "tot_course_count = df[\"CourseName\"].nunique()\n",
     "# Filter the DataFrame to select rows with 'ItemType' equal to 'Architecture, B.Arch checksheet'\n",
-    "architecture_courses_df = df[df['Item'] == 'Architecture, B.Arch checksheet']\n",
+    "architecture_courses_df = df[df[\"Item\"] == \"Architecture, B.Arch checksheet\"]\n",
     "\n",
     "# Get the count of 'Architecture, B.Arch checksheet' items\n",
     "b_arch_count = len(architecture_courses_df)\n",
     "\n",
     "proportion_b_arch = (b_arch_count / tot_course_count) * 100\n",
     "\n",
-    "print(f'{round(proportion_b_arch,2)}% of courses are in the Architecture, B.Arch checksheet')"
+    "print(\n",
+    "    f\"{round(proportion_b_arch,2)}% of courses are in the Architecture, B.Arch checksheet\"\n",
+    ")"
    ]
   },
   {
@@ -572,15 +588,17 @@
     }
    ],
    "source": [
-    "# Filter the DataFrame to select rows with 'courseLetter' equal to 'ARC' \n",
-    "ARC_courses_df = df[df['CourseLetter'] == 'ARC'].groupby('CourseName') #changed column name to 'CourseName' instead of 'courseName' to filter from the dictionary instead of associations'\n",
+    "# Filter the DataFrame to select rows with 'courseLetter' equal to 'ARC'\n",
+    "ARC_courses_df = df[df[\"CourseLetter\"] == \"ARC\"].groupby(\n",
+    "    \"CourseName\"\n",
+    ")  # changed column name to 'CourseName' instead of 'courseName' to filter from the dictionary instead of associations'\n",
     "\n",
     "# Get the count of 'ARC' courses\n",
     "ARC_count = len(ARC_courses_df)\n",
     "\n",
     "proportion_ARC = (ARC_count / tot_course_count) * 100\n",
     "\n",
-    "print(f'{round(proportion_ARC,2)}% of courses are ARC courses')"
+    "print(f\"{round(proportion_ARC,2)}% of courses are ARC courses\")"
    ]
   },
   {
@@ -607,11 +625,15 @@
    ],
    "source": [
     "# assuming independece I would multiply the proportion of both ARC and B. Arch checklist and divide by total course count.\n",
-    "b_Arch_ARC = ((ARC_count / tot_course_count)) * ((b_arch_count / tot_course_count)) # independent intersection formula\n",
+    "b_Arch_ARC = ((ARC_count / tot_course_count)) * (\n",
+    "    (b_arch_count / tot_course_count)\n",
+    ")  # independent intersection formula\n",
     "\n",
     "ARC_and_b_arch = b_Arch_ARC * 100\n",
     "\n",
-    "print(f'{round(ARC_and_b_arch,4)}% of courses are ARC course and are in the Architecture, B.Arch checksheet')\n"
+    "print(\n",
+    "    f\"{round(ARC_and_b_arch,4)}% of courses are ARC course and are in the Architecture, B.Arch checksheet\"\n",
+    ")"
    ]
   },
   {
@@ -638,7 +660,9 @@
    ],
    "source": [
     "# Filter the DataFrame to select rows with 'ItemType' equal to 'Architecture, B.Arch checksheet' and 'courseLetter' equal to 'ARC'\n",
-    "ARC_and_b_arch_df = df[(df['courseLetter'] == 'ARC') & (df['Item'] == 'Architecture, B.Arch checksheet')]\n",
+    "ARC_and_b_arch_df = df[\n",
+    "    (df[\"courseLetter\"] == \"ARC\") & (df[\"Item\"] == \"Architecture, B.Arch checksheet\")\n",
+    "]\n",
     "\n",
     "# Get the count of 'Architecture, B.Arch checksheet' item and 'ARC' courseLetter\n",
     "ARC_and_b_arch_count = len(ARC_and_b_arch_df)\n",
@@ -647,7 +671,9 @@
     "\n",
     "# The conditional probability that a course with an ARC designation is part of the the Architecture, B.Arch checksheet is the proportion of both ARC and B.Arch divided by the proporation of just ARC\n",
     "cond_prob_ARC_is_b_arch = (proportion_ARC_and_b_arch / proportion_ARC) * 100\n",
-    "print(f' the conditional probability that a given course with an ARC designation is part of the Architecture, B.Arch checksheet is {round(cond_prob_ARC_is_b_arch, 2)}%')"
+    "print(\n",
+    "    f\" the conditional probability that a given course with an ARC designation is part of the Architecture, B.Arch checksheet is {round(cond_prob_ARC_is_b_arch, 2)}%\"\n",
+    ")"
    ]
   },
   {
@@ -673,7 +699,9 @@
    "source": [
     "# the conditional probability that a course that is part of the the Architecture, B.Arch checksheet is with an ARC designation is proportion of both ARC and B.Arch divided by the proporation of just courses on the Architecture, B.Arch checksheet\n",
     "cond_prob_b_arch_is_ARC = (proportion_ARC_and_b_arch / proportion_b_arch) * 100\n",
-    "print(f'the conditional probability that a given course in the Architecture, B.Arch checksheet is an ARC course {round(cond_prob_b_arch_is_ARC,2)}%')"
+    "print(\n",
+    "    f\"the conditional probability that a given course in the Architecture, B.Arch checksheet is an ARC course {round(cond_prob_b_arch_is_ARC,2)}%\"\n",
+    ")"
    ]
   },
   {
@@ -721,11 +749,13 @@
    ],
    "source": [
     "# FIlter the dataframe to group by unique values in the courseName column that also have a corresponding 'Prereq' record in the 'ItemType' field.\n",
-    "prereq = df[df['ItemType'] == 'Prereq'].groupby('courseName')\n",
+    "prereq = df[df[\"ItemType\"] == \"Prereq\"].groupby(\"courseName\")\n",
     "# Count the unique courses that appear as prerequisites\n",
     "prereq_count = len(prereq)\n",
     "prereq_proportion = (prereq_count / tot_course_count) * 100\n",
-    "print(f'Proportion of courses that are a prerequisite for another course: {round(prereq_proportion, 2)}%')\n"
+    "print(\n",
+    "    f\"Proportion of courses that are a prerequisite for another course: {round(prereq_proportion, 2)}%\"\n",
+    ")"
    ]
   },
   {
@@ -751,12 +781,16 @@
     }
    ],
    "source": [
-    "#simplified filtering and removed the regex from prior submission\n",
-    "prereq_filtered_df = df[(df['ItemType'] == 'Prereq')]\n",
+    "# simplified filtering and removed the regex from prior submission\n",
+    "prereq_filtered_df = df[(df[\"ItemType\"] == \"Prereq\")]\n",
     "# count the number of unique values based on 'courseName' column to not double count courses in the filtered data frame which now holds records that have a course in the 'Item' field and 'Prereq' in the ItemType Field\n",
-    "courses_with_prerequisites_count = len(prereq_filtered_df['Item'].unique())\n",
-    "prereq_filtered_df_count_proportion = (courses_with_prerequisites_count / tot_course_count) * 100\n",
-    "print(f'Proportion of courses that have at least one prerequisite: {round(prereq_filtered_df_count_proportion, 2)}%')\n"
+    "courses_with_prerequisites_count = len(prereq_filtered_df[\"Item\"].unique())\n",
+    "prereq_filtered_df_count_proportion = (\n",
+    "    courses_with_prerequisites_count / tot_course_count\n",
+    ") * 100\n",
+    "print(\n",
+    "    f\"Proportion of courses that have at least one prerequisite: {round(prereq_filtered_df_count_proportion, 2)}%\"\n",
+    ")"
    ]
   },
   {
@@ -783,14 +817,16 @@
    ],
    "source": [
     "# Filter the DataFrame to select rows with 'courseLetter' equal to 'AME'\n",
-    "AME_courses_df = df[df['CourseLetter'] == 'AME'] #changed column name to 'CourseName' instead of 'courseName' to filter from the dictionary instead of associations' \n",
+    "AME_courses_df = df[\n",
+    "    df[\"CourseLetter\"] == \"AME\"\n",
+    "]  # changed column name to 'CourseName' instead of 'courseName' to filter from the dictionary instead of associations'\n",
     "\n",
     "# Get the count of 'AME' courses\n",
     "AME_count = len(AME_courses_df)\n",
     "\n",
-    "support_x = (AME_count / tot_course_count)\n",
+    "support_x = AME_count / tot_course_count\n",
     "\n",
-    "print(f'The support the dataset provides for AME courses is {round(support_x,4)}')"
+    "print(f\"The support the dataset provides for AME courses is {round(support_x,4)}\")"
    ]
   },
   {
@@ -815,11 +851,13 @@
    ],
    "source": [
     "# Count the number of crosslisted courses\n",
-    "crossList_count = len(df_course_counts['CrossList Count'])\n",
+    "crossList_count = len(df_course_counts[\"CrossList Count\"])\n",
     "# Support is calculated the same as the proportations from earlier questions. However it is presented as a ratio and is defined as the number of transactions or records containing 'x' divided byt the total number of tranasactions,\n",
-    "support_y = (crossList_count / tot_course_count)\n",
+    "support_y = crossList_count / tot_course_count\n",
     "\n",
-    "print(f'The support the dataset provides for corsslisted courses is {round(support_y,4)}')"
+    "print(\n",
+    "    f\"The support the dataset provides for corsslisted courses is {round(support_y,4)}\"\n",
+    ")"
    ]
   },
   {
@@ -845,13 +883,13 @@
     }
    ],
    "source": [
-    "#calculate support of both x (AME) and y(crosslisted) is calculated\n",
+    "# calculate support of both x (AME) and y(crosslisted) is calculated\n",
     "support_x_y = support_x * support_y\n",
     "\n",
     "# Calculate the confidence of AME courses being cross-listed\n",
     "confidence_x_y = support_x_y / support_x\n",
     "\n",
-    "print(f'The confidence than an AME course is croslisted is {round(confidence_x_y,4)}')"
+    "print(f\"The confidence than an AME course is croslisted is {round(confidence_x_y,4)}\")"
    ]
   },
   {
@@ -877,9 +915,11 @@
     }
    ],
    "source": [
-    "#lift is calculated by dividing the Confidence by support from question 14\n",
+    "# lift is calculated by dividing the Confidence by support from question 14\n",
     "lift_x_y = confidence_x_y / support_y\n",
-    "print(f'The lift associated with the knowledge that the course is an AME course {round(lift_x_y,4)}')"
+    "print(\n",
+    "    f\"The lift associated with the knowledge that the course is an AME course {round(lift_x_y,4)}\"\n",
+    ")"
    ]
   }
  ],
