--- a/statistical_distributions/statistical_distributions.ipynb
+++ b/statistical_distributions/statistical_distributions.ipynb
@@ -135,8 +135,8 @@
     }
    ],
    "source": [
-    "#read in the DSE501A3 data and set the state abbreviations as the index column\n",
-    "df = pd.read_csv('gerrymandering.csv', index_col =0) \n",
+    "# read in the DSE501A3 data and set the state abbreviations as the index column\n",
+    "df = pd.read_csv(\"gerrymandering.csv\", index_col=0)\n",
     "df.head()"
    ]
   },
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "# Calculate z-scores to prep for upcoming questions\n",
-    "df['Z-Score'] = (df['Observed'] - df['AVGRepC']) / df['SDRepC']"
+    "df[\"Z-Score\"] = (df[\"Observed\"] - df[\"AVGRepC\"]) / df[\"SDRepC\"]"
    ]
   },
   {
@@ -172,10 +172,10 @@
     }
    ],
    "source": [
-    "max_zscore_state = df['Z-Score'].idxmax()\n",
-    "z_score_for_NC = df.loc['NC', 'Z-Score']\n",
+    "max_zscore_state = df[\"Z-Score\"].idxmax()\n",
+    "z_score_for_NC = df.loc[\"NC\", \"Z-Score\"]\n",
     "print(f\"Max Z-Score State: {max_zscore_state}\")\n",
-    "print(f'Z-Score for NC: {round(z_score_for_NC, 3)}')"
+    "print(f\"Z-Score for NC: {round(z_score_for_NC, 3)}\")"
    ]
   },
   {
@@ -200,10 +200,10 @@
     }
    ],
    "source": [
-    "min_zscore_state = df['Z-Score'].idxmin()\n",
-    "z_score_for_MD = df.loc['MD', 'Z-Score']\n",
+    "min_zscore_state = df[\"Z-Score\"].idxmin()\n",
+    "z_score_for_MD = df.loc[\"MD\", \"Z-Score\"]\n",
     "print(f\"Min Z-Score State: {min_zscore_state}\")\n",
-    "print(f'Z-Score for MD: {round(z_score_for_MD, 3)}')"
+    "print(f\"Z-Score for MD: {round(z_score_for_MD, 3)}\")"
    ]
   },
   {
@@ -228,14 +228,14 @@
    ],
    "source": [
     "# Calculate the absolute differences from 0\n",
-    "df['Z-Score_Diff'] = abs(df['Z-Score'] - 0)\n",
+    "df[\"Z-Score_Diff\"] = abs(df[\"Z-Score\"] - 0)\n",
     "\n",
     "# Find states with the smallest differences (closest to 0)\n",
-    "min_diff = df['Z-Score_Diff'].min()\n",
-    "close_to_zero_states = df[df['Z-Score_Diff'] == min_diff].index.tolist()\n",
+    "min_diff = df[\"Z-Score_Diff\"].min()\n",
+    "close_to_zero_states = df[df[\"Z-Score_Diff\"] == min_diff].index.tolist()\n",
     "\n",
     "# Print the states\n",
-    "print(f\"States with Z-Scores Closest to 0: {', '.join(close_to_zero_states)}\")\n"
+    "print(f\"States with Z-Scores Closest to 0: {', '.join(close_to_zero_states)}\")"
    ]
   },
   {
@@ -260,7 +260,9 @@
    ],
    "source": [
     "significant_difference_threshold = 2\n",
-    "significant_difference_states = df[abs(df['Z-Score']) > significant_difference_threshold].index.tolist()\n",
+    "significant_difference_states = df[\n",
+    "    abs(df[\"Z-Score\"]) > significant_difference_threshold\n",
+    "].index.tolist()\n",
     "print(f\"States with Significant Differences: {significant_difference_states}\")"
    ]
   },
@@ -285,13 +287,17 @@
     }
    ],
    "source": [
-    "significant_difference_threshold = 0.05  # Set the significance threshold for a one-tail test (left tail)\n",
+    "significant_difference_threshold = (\n",
+    "    0.05  # Set the significance threshold for a one-tail test (left tail)\n",
+    ")\n",
     "\n",
     "# Find states favoring Democrats (negative z-scores for a one-tail test)\n",
-    "democratic_favor_states = df[df['Z-Score'] < -stats.norm.ppf(1 - significant_difference_threshold)].index.tolist()\n",
+    "democratic_favor_states = df[\n",
+    "    df[\"Z-Score\"] < -stats.norm.ppf(1 - significant_difference_threshold)\n",
+    "].index.tolist()\n",
     "\n",
     "# Print the states\n",
-    "print(f\"States Favoring Democrats: {', '.join(democratic_favor_states)}\")\n"
+    "print(f\"States Favoring Democrats: {', '.join(democratic_favor_states)}\")"
    ]
   },
   {
@@ -315,13 +321,17 @@
     }
    ],
    "source": [
-    "significant_difference_threshold = 0.05  # Set the significance threshold for a one-tail test (right tail)\n",
+    "significant_difference_threshold = (\n",
+    "    0.05  # Set the significance threshold for a one-tail test (right tail)\n",
+    ")\n",
     "\n",
     "# Find states favoring Republicans (positive z-scores for a one-tail test)\n",
-    "republican_favor_states = df[df['Z-Score'] > stats.norm.ppf(1 - significant_difference_threshold)].index.tolist()\n",
+    "republican_favor_states = df[\n",
+    "    df[\"Z-Score\"] > stats.norm.ppf(1 - significant_difference_threshold)\n",
+    "].index.tolist()\n",
     "\n",
     "# Print the states\n",
-    "print(f\"States Favoring Republicans: {', '.join(republican_favor_states)}\")\n"
+    "print(f\"States Favoring Republicans: {', '.join(republican_favor_states)}\")"
    ]
   },
   {
@@ -346,8 +356,10 @@
    ],
    "source": [
     "# Calculate the effect size for each state and find the smallest one\n",
-    "df['EffectSize'] = abs(df['AVGIBC'] - df['AVGIB'])\n",
-    "smallest_effect_size_states = df[df['EffectSize'] == df['EffectSize'].min()].index.tolist()\n",
+    "df[\"EffectSize\"] = abs(df[\"AVGIBC\"] - df[\"AVGIB\"])\n",
+    "smallest_effect_size_states = df[\n",
+    "    df[\"EffectSize\"] == df[\"EffectSize\"].min()\n",
+    "].index.tolist()\n",
     "print(f\"States with Smallest Effect Size: {smallest_effect_size_states}\")"
    ]
   },
@@ -381,14 +393,17 @@
     "\n",
     "for index, row in df.iterrows():\n",
     "    # Calculate the sample size using the Lehr Formula\n",
-    "    sample_size = 21 / ((row['EffectSize'] / row['SDIB']) ** 2)\n",
+    "    sample_size = 21 / ((row[\"EffectSize\"] / row[\"SDIB\"]) ** 2)\n",
     "\n",
     "    # Check if the sample size is less than the threshold\n",
     "    if sample_size < sample_size_threshold:\n",
     "        states_with_fundamentally_separated_distributions.append(index)\n",
     "\n",
     "# Print the states\n",
-    "print(\"States with Fundamentally Separated District Internal Borders =\", states_with_fundamentally_separated_distributions)\n"
+    "print(\n",
+    "    \"States with Fundamentally Separated District Internal Borders =\",\n",
+    "    states_with_fundamentally_separated_distributions,\n",
+    ")"
    ]
   },
   {
@@ -414,15 +429,22 @@
    "source": [
     "power_threshold = 0.9\n",
     "\n",
-    "z_alpha = stats.norm.ppf(1 - alpha/2)\n",
-    "power_with_prioritization = 1 - stats.norm.cdf(-z_alpha - (abs(df['AVGIBC'] - df['AVGIB']) / df['SDIBC']))\n",
-    "power_without_prioritization = 1 - stats.norm.cdf(-z_alpha - (abs(df['AVGIBC'] - df['AVGIB']) / df['SDIB']))\n",
+    "z_alpha = stats.norm.ppf(1 - alpha / 2)\n",
+    "power_with_prioritization = 1 - stats.norm.cdf(\n",
+    "    -z_alpha - (abs(df[\"AVGIBC\"] - df[\"AVGIB\"]) / df[\"SDIBC\"])\n",
+    ")\n",
+    "power_without_prioritization = 1 - stats.norm.cdf(\n",
+    "    -z_alpha - (abs(df[\"AVGIBC\"] - df[\"AVGIB\"]) / df[\"SDIB\"])\n",
+    ")\n",
     "\n",
     "mean_power_with_prioritization = power_with_prioritization.mean()\n",
     "mean_power_without_prioritization = power_without_prioritization.mean()\n",
     "symmetry_threshold = 0.05\n",
     "\n",
-    "power_calculation_asymmetric = abs(mean_power_with_prioritization - mean_power_without_prioritization) >= symmetry_threshold\n",
+    "power_calculation_asymmetric = (\n",
+    "    abs(mean_power_with_prioritization - mean_power_without_prioritization)\n",
+    "    >= symmetry_threshold\n",
+    ")\n",
     "print(f\"Power Calculation: {power_calculation_asymmetric}\")"
    ]
   },
@@ -448,27 +470,37 @@
    ],
    "source": [
     "# Calculate the critical value for the county prioritized distribution\n",
-    "county_prioritized_mean = df['AVGIBC']\n",
-    "county_prioritized_std = df['SDIBC']\n",
+    "county_prioritized_mean = df[\"AVGIBC\"]\n",
+    "county_prioritized_std = df[\"SDIBC\"]\n",
     "county_prioritized_critical_value = stats.norm.ppf(1 - alpha)\n",
     "\n",
     "# Calculate the critical value for the non-county prioritized distribution\n",
-    "non_county_prioritized_mean = df['AVGIB']\n",
-    "non_county_prioritized_std = df['SDIB']\n",
+    "non_county_prioritized_mean = df[\"AVGIB\"]\n",
+    "non_county_prioritized_std = df[\"SDIB\"]\n",
     "non_county_prioritized_critical_value = stats.norm.ppf(1 - alpha)\n",
     "\n",
     "# Calculate the power for both scenarios\n",
-    "power_with_county_prioritization = 1 - stats.norm.cdf(county_prioritized_critical_value, loc=non_county_prioritized_mean, scale=non_county_prioritized_std)\n",
-    "power_without_county_prioritization = 1 - stats.norm.cdf(non_county_prioritized_critical_value, loc=county_prioritized_mean, scale=county_prioritized_std)\n",
+    "power_with_county_prioritization = 1 - stats.norm.cdf(\n",
+    "    county_prioritized_critical_value,\n",
+    "    loc=non_county_prioritized_mean,\n",
+    "    scale=non_county_prioritized_std,\n",
+    ")\n",
+    "power_without_county_prioritization = 1 - stats.norm.cdf(\n",
+    "    non_county_prioritized_critical_value,\n",
+    "    loc=county_prioritized_mean,\n",
+    "    scale=county_prioritized_std,\n",
+    ")\n",
     "\n",
     "# Calculate the power difference\n",
-    "power_difference = abs(power_with_county_prioritization - power_without_county_prioritization)\n",
+    "power_difference = abs(\n",
+    "    power_with_county_prioritization - power_without_county_prioritization\n",
+    ")\n",
     "\n",
     "# Find the state with the biggest power difference\n",
     "max_power_difference_state = df.index[power_difference.argmax()]\n",
     "\n",
     "# Print the state with the biggest power difference\n",
-    "print(f\"State with the biggest power difference: {max_power_difference_state}\")\n"
+    "print(f\"State with the biggest power difference: {max_power_difference_state}\")"
    ]
   },
   {
@@ -496,13 +528,15 @@
     "max_power_with_prioritization = power_with_prioritization.max()\n",
     "max_power_without_prioritization = power_without_prioritization.max()\n",
     "states_with_highest_power_both = df[\n",
-    "    (power_with_prioritization == max_power_with_prioritization) &\n",
-    "    (power_without_prioritization == max_power_without_prioritization)\n",
+    "    (power_with_prioritization == max_power_with_prioritization)\n",
+    "    & (power_without_prioritization == max_power_without_prioritization)\n",
     "]\n",
     "\n",
     "if not states_with_highest_power_both.empty:\n",
     "    states_with_highest_power_both_names = states_with_highest_power_both.index.tolist()\n",
-    "    print(f\"States with the highest power in both calculations: {states_with_highest_power_both_names}\")\n",
+    "    print(\n",
+    "        f\"States with the highest power in both calculations: {states_with_highest_power_both_names}\"\n",
+    "    )\n",
     "else:\n",
     "    print(\"No states with the highest power in both calculations found.\")"
    ]
@@ -533,13 +567,17 @@
     "type_2_error_without_prioritization = 1 - power_without_prioritization\n",
     "\n",
     "# Calculate the combined Type II error for each state\n",
-    "combined_type_2_error = type_2_error_with_prioritization + type_2_error_without_prioritization\n",
+    "combined_type_2_error = (\n",
+    "    type_2_error_with_prioritization + type_2_error_without_prioritization\n",
+    ")\n",
     "\n",
     "# Find the state with the highest combined Type II error\n",
     "max_combined_type_2_error_state = df.index[combined_type_2_error.argmax()]\n",
     "\n",
     "# Print the state with the highest potential for Type II error\n",
-    "print(f\"State with the highest potential for Type II error: {max_combined_type_2_error_state}\")\n"
+    "print(\n",
+    "    f\"State with the highest potential for Type II error: {max_combined_type_2_error_state}\"\n",
+    ")"
    ]
   },
   {
